--- a/configs/config/pretrain/swav/swav_4node_vit.yaml
+++ b/configs/config/pretrain/swav/swav_4node_vit.yaml
@@ -25,11 +25,13 @@ config:
     TRAIN:
       DATA_SOURCES: [disk_folder]
       DATASET_NAMES: [imagenet1k_folder]
-      BATCHSIZE_PER_REPLICA: 256
       LABEL_TYPE: sample_index    # just an implementation detail. Label isn't used
       TRANSFORMS:
-        - name: ImgReplicatePil
-          num_times: 2
+        - name: ImgPilToMultiCrop
+          total_num_crops: 2
+          size_crops: [224]
+          num_crops: [2]
+          crop_scales: [[0.14, 1]]
         - name: RandomResizedCrop
           size: 224
         - name: RandomHorizontalFlip
@@ -44,7 +46,6 @@ config:
         - name: Normalize
           mean: [0.485, 0.456, 0.406]
           std: [0.229, 0.224, 0.225]
-      COLLATE_FUNCTION: moco_collator
       MMAP_MODE: True
       COPY_TO_LOCAL_DISK: False
       COPY_DESTINATION_DIR: /tmp/imagenet1k/
@@ -65,21 +66,8 @@ config:
   #          mean: [0.485, 0.456, 0.406]
   #          std: [0.229, 0.224, 0.225]
   MODEL:
-    TRUNK:
-      NAME: vision_transformer
-      TRUNK_PARAMS:
-        VISION_TRANSFORMERS:
-          name: vit_b_32
-          DROPOUT_RATE: 0.1
-          ATTENTION_DROPOUT_RATE: 0
-          CLASSIFIER: token
-    HEAD:
-      PARAMS: [
-      ["mlp", {"dims": [768, 2048], "use_relu": True}],
-      ["mlp", {"dims": [2048, 128]}],
-      ]
     SYNC_BN_CONFIG:
-      CONVERT_BN_TO_SYNC_BN: False
+      CONVERT_BN_TO_SYNC_BN: True
       SYNC_BN_TYPE: apex
       GROUP_SIZE: 8
     AMP_PARAMS:
@@ -87,15 +75,20 @@ config:
       # USE_AMP: True
       AMP_ARGS: {"opt_level": "O1"}
   LOSS:
-    name: moco_loss
-    moco_loss:
-      embedding_dim: 128
-      queue_size: 65536
-      momentum: 0.999
-      temperature: 0.2
+    name: swav_loss
+    swav_loss:
+      temperature: 0.1
+      use_double_precision: False
+      normalize_last_layer: True
+      num_iters: 3
+      epsilon: 0.05
+      crops_for_assign: [0, 1]
+      queue:
+        queue_length: 0
+        start_iter: 0
   OPTIMIZER:
     name: adamw
-    weight_decay: 0.3
+    weight_decay: 0.05
     #    momentum: 0.9
     num_epochs: 300
     #    nesterov: True
@@ -105,7 +98,7 @@ config:
       lr:
         auto_lr_scaling:
           auto_scale: True
-          base_value: 0.003
+          base_value: 0.0015
           base_lr_batch_size: 4096
         #        auto_lr_scaling: # learning rate is automatically scaled based on batch size
         #          auto_scale: true
@@ -121,7 +114,7 @@ config:
             end_value: 0
         interval_scaling: [rescaled, rescaled]
         update_interval: step
-        lengths: [0.1, 0.9]
+        lengths: [0.03, 0.97]
   GRAD_CLIP:
     USE_GRAD_CLIP: True
   METERS: null
@@ -132,7 +125,7 @@ config:
     TRAIN_STEP_NAME: standard_train_step
   DISTRIBUTED:
     BACKEND: nccl
-    NUM_NODES:
+    NUM_NODES: 4
     NUM_PROC_PER_NODE: 8 # 1 GPU
     RUN_ID: "60215"
     SLURM_ENV: True
