--- a/configs/config/pretrain/swav/optimization/swav_4node_vit.yaml
+++ b/configs/config/pretrain/swav/optimization/swav_4node_vit.yaml
@@ -45,6 +45,7 @@ config:
         - name: Normalize
           mean: [0.485, 0.456, 0.406]
           std: [0.229, 0.224, 0.225]
+      COLLATE_FUNCTION: multicrop_collator
       MMAP_MODE: True
       COPY_TO_LOCAL_DISK: False
       COPY_DESTINATION_DIR: /tmp/imagenet1k/
